# prefect-mcp-server

./: .cursorrules  Dockerfile  README.md  prefect_mcp_server.py  pyproject.toml  smithery.yaml
.cursor/rules/: build_mcp.mdc  build_mcp_python.mdc  prefect_mcp_usage.md
.github/workflows/: publish.yml
prefect_mcp_server_pkg/: server.py
